Exemplo/y.output
Terminais não utilizados na gramática

   TK_FIM
   TK_ERROR
   '+'
   '-'
   '*'
   '/'
   '='


Estado 53 conflitos: 1 de redução/redução
Estado 55 conflitos: 3 de deslocamento/redução
Estado 56 conflitos: 3 de deslocamento/redução
Estado 57 conflitos: 3 de deslocamento/redução


Gramática

    0 $accept: START $end

    1 START: ESCOPO_GLOBAL S

    2 S: DECL_GLOBAL ';' MAIN
    3  | MAIN

    4 MAIN: TK_TIPO_INT TK_MAIN '(' ')' BLOCO

    5 ESCOPO_GLOBAL: %empty

    6 INICIA_ESCOPO: '{'

    7 TERMINA_ESCOPO: '}'

    8 BLOCO: INICIA_ESCOPO COMANDOS TERMINA_ESCOPO

    9 COMANDOS: COMANDO
   10         | COMANDO COMANDOS

   11 COMANDO: DECLARACAO ';'
   12        | ATRIBUICAO ';'

   13 DECL_GLOBAL: TIPO TK_ID TK_ATRIBUICAO VALOR
   14            | TIPO TK_ID

   15 DECLARACAO: TIPO TK_ID TK_ATRIBUICAO VALOR
   16           | TIPO TK_ID TK_ATRIBUICAO E
   17           | TIPO TK_ID

   18 ATRIBUICAO: TK_ID TK_ATRIBUICAO E

   19 E: '(' E ')'
   20  | E TK_OPERADOR_MATEMATICO E
   21  | E TK_OPERADOR_RELACIONAL E
   22  | E TK_OPERADOR_LOGICO E
   23  | VALOR
   24  | TK_ID

   25 TIPO: TK_TIPO_INT
   26     | TK_TIPO_CHAR
   27     | TK_TIPO_FLOAT
   28     | TK_TIPO_STRING
   29     | TK_TIPO_BOOLEAN

   30 VALOR: TK_NUM
   31      | TK_REAL
   32      | TK_CHAR
   33      | TK_VALOR_LOGICO


Terminais, com as regras onde eles aparecem

$end (0) 0
'(' (40) 4 19
')' (41) 4 19
'*' (42)
'+' (43)
'-' (45)
'/' (47)
';' (59) 2 11 12
'=' (61)
'{' (123) 6
'}' (125) 7
error (256)
TK_NUM (258) 30
TK_REAL (259) 31
TK_VALOR_LOGICO (260) 33
TK_CHAR (261) 32
TK_MAIN (262) 4
TK_ID (263) 13 14 15 16 17 18 24
TK_FIM (264)
TK_ERROR (265)
TK_OPERADOR_LOGICO (266) 22
TK_OPERADOR_RELACIONAL (267) 21
TK_OPERADOR_MATEMATICO (268) 20
TK_ATRIBUICAO (269) 13 15 16 18
TK_TIPO_INT (270) 4 25
TK_TIPO_CHAR (271) 26
TK_TIPO_FLOAT (272) 27
TK_TIPO_STRING (273) 28
TK_TIPO_BOOLEAN (274) 29


Não-terminais com as regras onde eles aparecem

$accept (30)
    à esquerda: 0
START (31)
    à esquerda: 1, à direita: 0
S (32)
    à esquerda: 2 3, à direita: 1
MAIN (33)
    à esquerda: 4, à direita: 2 3
ESCOPO_GLOBAL (34)
    à esquerda: 5, à direita: 1
INICIA_ESCOPO (35)
    à esquerda: 6, à direita: 8
TERMINA_ESCOPO (36)
    à esquerda: 7, à direita: 8
BLOCO (37)
    à esquerda: 8, à direita: 4
COMANDOS (38)
    à esquerda: 9 10, à direita: 8 10
COMANDO (39)
    à esquerda: 11 12, à direita: 9 10
DECL_GLOBAL (40)
    à esquerda: 13 14, à direita: 2
DECLARACAO (41)
    à esquerda: 15 16 17, à direita: 11
ATRIBUICAO (42)
    à esquerda: 18, à direita: 12
E (43)
    à esquerda: 19 20 21 22 23 24, à direita: 16 18 19 20 21 22
TIPO (44)
    à esquerda: 25 26 27 28 29, à direita: 13 14 15 16 17
VALOR (45)
    à esquerda: 30 31 32 33, à direita: 13 15 23


State 0

    0 $accept: . START $end

    $padrão  reduzir usando a regra 5 (ESCOPO_GLOBAL)

    START          ir ao estado 1
    ESCOPO_GLOBAL  ir ao estado 2


State 1

    0 $accept: START . $end

    $end  deslocar, e ir ao estado 3


State 2

    1 START: ESCOPO_GLOBAL . S

    TK_TIPO_INT      deslocar, e ir ao estado 4
    TK_TIPO_CHAR     deslocar, e ir ao estado 5
    TK_TIPO_FLOAT    deslocar, e ir ao estado 6
    TK_TIPO_STRING   deslocar, e ir ao estado 7
    TK_TIPO_BOOLEAN  deslocar, e ir ao estado 8

    S            ir ao estado 9
    MAIN         ir ao estado 10
    DECL_GLOBAL  ir ao estado 11
    TIPO         ir ao estado 12


State 3

    0 $accept: START $end .

    $padrão  aceitar


State 4

    4 MAIN: TK_TIPO_INT . TK_MAIN '(' ')' BLOCO
   25 TIPO: TK_TIPO_INT .

    TK_MAIN  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 25 (TIPO)


State 5

   26 TIPO: TK_TIPO_CHAR .

    $padrão  reduzir usando a regra 26 (TIPO)


State 6

   27 TIPO: TK_TIPO_FLOAT .

    $padrão  reduzir usando a regra 27 (TIPO)


State 7

   28 TIPO: TK_TIPO_STRING .

    $padrão  reduzir usando a regra 28 (TIPO)


State 8

   29 TIPO: TK_TIPO_BOOLEAN .

    $padrão  reduzir usando a regra 29 (TIPO)


State 9

    1 START: ESCOPO_GLOBAL S .

    $padrão  reduzir usando a regra 1 (START)


State 10

    3 S: MAIN .

    $padrão  reduzir usando a regra 3 (S)


State 11

    2 S: DECL_GLOBAL . ';' MAIN

    ';'  deslocar, e ir ao estado 14


State 12

   13 DECL_GLOBAL: TIPO . TK_ID TK_ATRIBUICAO VALOR
   14            | TIPO . TK_ID

    TK_ID  deslocar, e ir ao estado 15


State 13

    4 MAIN: TK_TIPO_INT TK_MAIN . '(' ')' BLOCO

    '('  deslocar, e ir ao estado 16


State 14

    2 S: DECL_GLOBAL ';' . MAIN

    TK_TIPO_INT  deslocar, e ir ao estado 17

    MAIN  ir ao estado 18


State 15

   13 DECL_GLOBAL: TIPO TK_ID . TK_ATRIBUICAO VALOR
   14            | TIPO TK_ID .

    TK_ATRIBUICAO  deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 14 (DECL_GLOBAL)


State 16

    4 MAIN: TK_TIPO_INT TK_MAIN '(' . ')' BLOCO

    ')'  deslocar, e ir ao estado 20


State 17

    4 MAIN: TK_TIPO_INT . TK_MAIN '(' ')' BLOCO

    TK_MAIN  deslocar, e ir ao estado 13


State 18

    2 S: DECL_GLOBAL ';' MAIN .

    $padrão  reduzir usando a regra 2 (S)


State 19

   13 DECL_GLOBAL: TIPO TK_ID TK_ATRIBUICAO . VALOR

    TK_NUM           deslocar, e ir ao estado 21
    TK_REAL          deslocar, e ir ao estado 22
    TK_VALOR_LOGICO  deslocar, e ir ao estado 23
    TK_CHAR          deslocar, e ir ao estado 24

    VALOR  ir ao estado 25


State 20

    4 MAIN: TK_TIPO_INT TK_MAIN '(' ')' . BLOCO

    '{'  deslocar, e ir ao estado 26

    INICIA_ESCOPO  ir ao estado 27
    BLOCO          ir ao estado 28


State 21

   30 VALOR: TK_NUM .

    $padrão  reduzir usando a regra 30 (VALOR)


State 22

   31 VALOR: TK_REAL .

    $padrão  reduzir usando a regra 31 (VALOR)


State 23

   33 VALOR: TK_VALOR_LOGICO .

    $padrão  reduzir usando a regra 33 (VALOR)


State 24

   32 VALOR: TK_CHAR .

    $padrão  reduzir usando a regra 32 (VALOR)


State 25

   13 DECL_GLOBAL: TIPO TK_ID TK_ATRIBUICAO VALOR .

    $padrão  reduzir usando a regra 13 (DECL_GLOBAL)


State 26

    6 INICIA_ESCOPO: '{' .

    $padrão  reduzir usando a regra 6 (INICIA_ESCOPO)


State 27

    8 BLOCO: INICIA_ESCOPO . COMANDOS TERMINA_ESCOPO

    TK_ID            deslocar, e ir ao estado 29
    TK_TIPO_INT      deslocar, e ir ao estado 30
    TK_TIPO_CHAR     deslocar, e ir ao estado 5
    TK_TIPO_FLOAT    deslocar, e ir ao estado 6
    TK_TIPO_STRING   deslocar, e ir ao estado 7
    TK_TIPO_BOOLEAN  deslocar, e ir ao estado 8

    COMANDOS    ir ao estado 31
    COMANDO     ir ao estado 32
    DECLARACAO  ir ao estado 33
    ATRIBUICAO  ir ao estado 34
    TIPO        ir ao estado 35


State 28

    4 MAIN: TK_TIPO_INT TK_MAIN '(' ')' BLOCO .

    $padrão  reduzir usando a regra 4 (MAIN)


State 29

   18 ATRIBUICAO: TK_ID . TK_ATRIBUICAO E

    TK_ATRIBUICAO  deslocar, e ir ao estado 36


State 30

   25 TIPO: TK_TIPO_INT .

    $padrão  reduzir usando a regra 25 (TIPO)


State 31

    8 BLOCO: INICIA_ESCOPO COMANDOS . TERMINA_ESCOPO

    '}'  deslocar, e ir ao estado 37

    TERMINA_ESCOPO  ir ao estado 38


State 32

    9 COMANDOS: COMANDO .
   10         | COMANDO . COMANDOS

    TK_ID            deslocar, e ir ao estado 29
    TK_TIPO_INT      deslocar, e ir ao estado 30
    TK_TIPO_CHAR     deslocar, e ir ao estado 5
    TK_TIPO_FLOAT    deslocar, e ir ao estado 6
    TK_TIPO_STRING   deslocar, e ir ao estado 7
    TK_TIPO_BOOLEAN  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 9 (COMANDOS)

    COMANDOS    ir ao estado 39
    COMANDO     ir ao estado 32
    DECLARACAO  ir ao estado 33
    ATRIBUICAO  ir ao estado 34
    TIPO        ir ao estado 35


State 33

   11 COMANDO: DECLARACAO . ';'

    ';'  deslocar, e ir ao estado 40


State 34

   12 COMANDO: ATRIBUICAO . ';'

    ';'  deslocar, e ir ao estado 41


State 35

   15 DECLARACAO: TIPO . TK_ID TK_ATRIBUICAO VALOR
   16           | TIPO . TK_ID TK_ATRIBUICAO E
   17           | TIPO . TK_ID

    TK_ID  deslocar, e ir ao estado 42


State 36

   18 ATRIBUICAO: TK_ID TK_ATRIBUICAO . E

    TK_NUM           deslocar, e ir ao estado 21
    TK_REAL          deslocar, e ir ao estado 22
    TK_VALOR_LOGICO  deslocar, e ir ao estado 23
    TK_CHAR          deslocar, e ir ao estado 24
    TK_ID            deslocar, e ir ao estado 43
    '('              deslocar, e ir ao estado 44

    E      ir ao estado 45
    VALOR  ir ao estado 46


State 37

    7 TERMINA_ESCOPO: '}' .

    $padrão  reduzir usando a regra 7 (TERMINA_ESCOPO)


State 38

    8 BLOCO: INICIA_ESCOPO COMANDOS TERMINA_ESCOPO .

    $padrão  reduzir usando a regra 8 (BLOCO)


State 39

   10 COMANDOS: COMANDO COMANDOS .

    $padrão  reduzir usando a regra 10 (COMANDOS)


State 40

   11 COMANDO: DECLARACAO ';' .

    $padrão  reduzir usando a regra 11 (COMANDO)


State 41

   12 COMANDO: ATRIBUICAO ';' .

    $padrão  reduzir usando a regra 12 (COMANDO)


State 42

   15 DECLARACAO: TIPO TK_ID . TK_ATRIBUICAO VALOR
   16           | TIPO TK_ID . TK_ATRIBUICAO E
   17           | TIPO TK_ID .

    TK_ATRIBUICAO  deslocar, e ir ao estado 47

    $padrão  reduzir usando a regra 17 (DECLARACAO)


State 43

   24 E: TK_ID .

    $padrão  reduzir usando a regra 24 (E)


State 44

   19 E: '(' . E ')'

    TK_NUM           deslocar, e ir ao estado 21
    TK_REAL          deslocar, e ir ao estado 22
    TK_VALOR_LOGICO  deslocar, e ir ao estado 23
    TK_CHAR          deslocar, e ir ao estado 24
    TK_ID            deslocar, e ir ao estado 43
    '('              deslocar, e ir ao estado 44

    E      ir ao estado 48
    VALOR  ir ao estado 46


State 45

   18 ATRIBUICAO: TK_ID TK_ATRIBUICAO E .
   20 E: E . TK_OPERADOR_MATEMATICO E
   21  | E . TK_OPERADOR_RELACIONAL E
   22  | E . TK_OPERADOR_LOGICO E

    TK_OPERADOR_LOGICO      deslocar, e ir ao estado 49
    TK_OPERADOR_RELACIONAL  deslocar, e ir ao estado 50
    TK_OPERADOR_MATEMATICO  deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 18 (ATRIBUICAO)


State 46

   23 E: VALOR .

    $padrão  reduzir usando a regra 23 (E)


State 47

   15 DECLARACAO: TIPO TK_ID TK_ATRIBUICAO . VALOR
   16           | TIPO TK_ID TK_ATRIBUICAO . E

    TK_NUM           deslocar, e ir ao estado 21
    TK_REAL          deslocar, e ir ao estado 22
    TK_VALOR_LOGICO  deslocar, e ir ao estado 23
    TK_CHAR          deslocar, e ir ao estado 24
    TK_ID            deslocar, e ir ao estado 43
    '('              deslocar, e ir ao estado 44

    E      ir ao estado 52
    VALOR  ir ao estado 53


State 48

   19 E: '(' E . ')'
   20  | E . TK_OPERADOR_MATEMATICO E
   21  | E . TK_OPERADOR_RELACIONAL E
   22  | E . TK_OPERADOR_LOGICO E

    TK_OPERADOR_LOGICO      deslocar, e ir ao estado 49
    TK_OPERADOR_RELACIONAL  deslocar, e ir ao estado 50
    TK_OPERADOR_MATEMATICO  deslocar, e ir ao estado 51
    ')'                     deslocar, e ir ao estado 54


State 49

   22 E: E TK_OPERADOR_LOGICO . E

    TK_NUM           deslocar, e ir ao estado 21
    TK_REAL          deslocar, e ir ao estado 22
    TK_VALOR_LOGICO  deslocar, e ir ao estado 23
    TK_CHAR          deslocar, e ir ao estado 24
    TK_ID            deslocar, e ir ao estado 43
    '('              deslocar, e ir ao estado 44

    E      ir ao estado 55
    VALOR  ir ao estado 46


State 50

   21 E: E TK_OPERADOR_RELACIONAL . E

    TK_NUM           deslocar, e ir ao estado 21
    TK_REAL          deslocar, e ir ao estado 22
    TK_VALOR_LOGICO  deslocar, e ir ao estado 23
    TK_CHAR          deslocar, e ir ao estado 24
    TK_ID            deslocar, e ir ao estado 43
    '('              deslocar, e ir ao estado 44

    E      ir ao estado 56
    VALOR  ir ao estado 46


State 51

   20 E: E TK_OPERADOR_MATEMATICO . E

    TK_NUM           deslocar, e ir ao estado 21
    TK_REAL          deslocar, e ir ao estado 22
    TK_VALOR_LOGICO  deslocar, e ir ao estado 23
    TK_CHAR          deslocar, e ir ao estado 24
    TK_ID            deslocar, e ir ao estado 43
    '('              deslocar, e ir ao estado 44

    E      ir ao estado 57
    VALOR  ir ao estado 46


State 52

   16 DECLARACAO: TIPO TK_ID TK_ATRIBUICAO E .
   20 E: E . TK_OPERADOR_MATEMATICO E
   21  | E . TK_OPERADOR_RELACIONAL E
   22  | E . TK_OPERADOR_LOGICO E

    TK_OPERADOR_LOGICO      deslocar, e ir ao estado 49
    TK_OPERADOR_RELACIONAL  deslocar, e ir ao estado 50
    TK_OPERADOR_MATEMATICO  deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 16 (DECLARACAO)


State 53

   15 DECLARACAO: TIPO TK_ID TK_ATRIBUICAO VALOR .
   23 E: VALOR .

    ';'       reduzir usando a regra 15 (DECLARACAO)
    ';'       [reduzir usando a regra 23 (E)]
    $padrão  reduzir usando a regra 23 (E)


State 54

   19 E: '(' E ')' .

    $padrão  reduzir usando a regra 19 (E)


State 55

   20 E: E . TK_OPERADOR_MATEMATICO E
   21  | E . TK_OPERADOR_RELACIONAL E
   22  | E . TK_OPERADOR_LOGICO E
   22  | E TK_OPERADOR_LOGICO E .

    TK_OPERADOR_LOGICO      deslocar, e ir ao estado 49
    TK_OPERADOR_RELACIONAL  deslocar, e ir ao estado 50
    TK_OPERADOR_MATEMATICO  deslocar, e ir ao estado 51

    TK_OPERADOR_LOGICO      [reduzir usando a regra 22 (E)]
    TK_OPERADOR_RELACIONAL  [reduzir usando a regra 22 (E)]
    TK_OPERADOR_MATEMATICO  [reduzir usando a regra 22 (E)]
    $padrão                reduzir usando a regra 22 (E)


State 56

   20 E: E . TK_OPERADOR_MATEMATICO E
   21  | E . TK_OPERADOR_RELACIONAL E
   21  | E TK_OPERADOR_RELACIONAL E .
   22  | E . TK_OPERADOR_LOGICO E

    TK_OPERADOR_LOGICO      deslocar, e ir ao estado 49
    TK_OPERADOR_RELACIONAL  deslocar, e ir ao estado 50
    TK_OPERADOR_MATEMATICO  deslocar, e ir ao estado 51

    TK_OPERADOR_LOGICO      [reduzir usando a regra 21 (E)]
    TK_OPERADOR_RELACIONAL  [reduzir usando a regra 21 (E)]
    TK_OPERADOR_MATEMATICO  [reduzir usando a regra 21 (E)]
    $padrão                reduzir usando a regra 21 (E)


State 57

   20 E: E . TK_OPERADOR_MATEMATICO E
   20  | E TK_OPERADOR_MATEMATICO E .
   21  | E . TK_OPERADOR_RELACIONAL E
   22  | E . TK_OPERADOR_LOGICO E

    TK_OPERADOR_LOGICO      deslocar, e ir ao estado 49
    TK_OPERADOR_RELACIONAL  deslocar, e ir ao estado 50
    TK_OPERADOR_MATEMATICO  deslocar, e ir ao estado 51

    TK_OPERADOR_LOGICO      [reduzir usando a regra 20 (E)]
    TK_OPERADOR_RELACIONAL  [reduzir usando a regra 20 (E)]
    TK_OPERADOR_MATEMATICO  [reduzir usando a regra 20 (E)]
    $padrão                reduzir usando a regra 20 (E)
